--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "helmet": "^3.18.0",
+    "knex": "^0.18.1",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
+    "pg": "^7.11.0",
     "uuid": "^3.3.2",
     "xss": "^1.0.6"
   },
