--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "faker": "^4.1.0",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "knex": "^0.18.1",
     "morgan": "^1.9.1",
-    "node-sass": "^4.12.0",
     "pg": "^7.11.0",
     "uuid": "^3.3.2",
     "xss": "^1.0.6"
