--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "knex": "^0.18.1",
     "morgan": "^1.9.1",
     "pg": "^7.11.0",
+    "lodash": ">=4.17.13",
     "uuid": "^3.3.2",
     "xss": "^1.0.6"
   },
